1:1 chat function implements

--- a/sdf_asp_net/Views/Project/DetailView.cshtml
+++ b/sdf_asp_net/Views/Project/DetailView.cshtml
@@ -6,7 +6,7 @@
     Layout = "~/Views/Shared/_Layout2.cshtml";
     ViewBag.Title = "DetailView";
 }
-<link href="~/Content/CSS/ChatSheet.css" rel="stylesheet" />
+
 <div class="col-md-12">
 </div>
 <div>
@@ -18,13 +18,22 @@
         <p>Projektleiter: @Html.DisplayFor(model => model.ManagerName) </p>
 
         <div>
+
             <h3>Chat</h3>
-            <textarea id="text"></textarea>
+
+            <textarea style="resize: none;" id="text" name="text" cols="70" rows="8"></textarea>
+            <textarea style="resize: none;" id="user" name="text" cols="50" rows="8"></textarea>
+
+
+
             <br />
             <input type="text" id="messageGroup" />
-            <input type="button" id="btnSendGroup" value="Send to Group" />
+
+            <input type="button" id="btnSendGroup" value="Send" />
+            <input type="button" id="btnPrivat" value="Send" />
+            <input type="text" id="privat" />
             <br />
-            <ul id="discussion"></ul>
+
 
         </div>
     </div>
@@ -101,34 +110,34 @@
                     <input type="hidden" name="projectId" class="form-control" value="@Html.DisplayFor(model => model.Id)" aria-label="Message" aria-describedby="button-addon4">
                     <div class="input-group-append" id="button-addon4">
                         <input type="file" name="postedFile" id="imgInp" class="btn btn-primary" />
-                            <input type="button" value="Vorschau" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter" />
+                        <input type="button" value="Vorschau" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter" />
 
-                            <!-- Modal for Image Preview -->
-                            <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-                                <div class="modal-dialog modal-dialog-centered" role="document">
-                                    <div class="modal-content">
-                                        <div class="modal-header">
-                                            <h5 class="modal-title" id="exampleModalLongTitle">Vorschau</h5>
-                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                                <span aria-hidden="true">&times;</span>
-                                            </button>
-                                        </div>
-                                        <div class="modal-body">
-                                            <iframe id="blah" style="width: 100%; height: 500px; display: none;" src="#" alt="ausgewählte Datei"></iframe>
-                                            <p id="noPreview" style="display: inline;">
-                                                Es ist keine Vorschau verfügbar.
-                                            </p>
-                                        </div>
-                                        <div class="modal-footer">
-                                            <button type="button" class="btn btn-primary" data-dismiss="modal">Schließen</button>
-                                        </div>
+                        <!-- Modal for Image Preview -->
+                        <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                            <div class="modal-dialog modal-dialog-centered" role="document">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="exampleModalLongTitle">Vorschau</h5>
+                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>
+                                        </button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <iframe id="blah" style="width: 100%; height: 500px; display: none;" src="#" alt="ausgewählte Datei"></iframe>
+                                        <p id="noPreview" style="display: inline;">
+                                            Es ist keine Vorschau verfügbar.
+                                        </p>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-primary" data-dismiss="modal">Schließen</button>
                                     </div>
                                 </div>
                             </div>
-
-                            <input type="submit" id="btnUpload" value=">" class="btn btn-primary" />
                         </div>
+
+                        <input type="submit" id="btnUpload" value=">" class="btn btn-primary" />
                     </div>
+                </div>
             }
         }
     }
@@ -189,15 +198,15 @@
 
 </script>
 
-    @section scripts {
-        <!--Script references. -->
-        <!--The jQuery library is required and is referenced by default in _Layout.cshtml. -->
-        <!--Reference the SignalR library. -->
-        <script src="~/Scripts/jquery.signalR-2.4.0.min.js"></script>
-        <!--Reference the autogenerated SignalR hub script. -->
-        <script src="~/signalr/hubs"></script>
-        <!--SignalR script to update the chat page and send messages.-->
-        <script>
+@section scripts {
+    <!--Script references. -->
+    <!--The jQuery library is required and is referenced by default in _Layout.cshtml. -->
+    <!--Reference the SignalR library. -->
+    <script src="~/Scripts/jquery.signalR-2.4.0.min.js"></script>
+    <!--Reference the autogenerated SignalR hub script. -->
+    <script src="~/signalr/hubs"></script>
+    <!--SignalR script to update the chat page and send messages.-->
+    <script>
         $(function () {
             // Reference the auto-generated proxy for the hub.
             var chat = $.connection.chatHub;
@@ -206,31 +215,42 @@
                 var text = document.getElementById("text").value += htmlEncode(name) + htmlEncode(message) + '\n';
                 checkTextareaHeight(text);
             };
-
-
-
-            chat.client.addNewMessageToAll = function (name, message) {
-
-                $('#discussion').append('<li><strong>' + htmlEncode(name)
-                    + '</strong>: ' + htmlEncode(message) + '</li>');
+            chat.client.isOnline = function (name, message) {
+                var text = document.getElementById("user").value += htmlEncode(name) + htmlEncode(message) + '\n';
+                checkTextareaHeight(text);
             };
+
+
+            chat.client.privatChat = function (name, message) {
+                var text = document.getElementById("text").value += htmlEncode("Privat: "+name) + htmlEncode(message) + '\n';
+                checkTextareaHeight(text);
+
+            };
+
+            chat.client.isOnline = function (name, message) {
+
+                var text = document.getElementById("user").value += htmlEncode(name)+'\n';
+                checkTextareaHeight(text);
+            };
+
+
 
             $('#message').focus();
             // Start the connection.
             $.connection.hub.start().done(function () {
 
-                $('#btnSendAll').click(function () {
-                    chat.server.sendAll("@User.Identity.Name", $('#messageAll').val());
-                });
 
-
-
-            chat.server.joinGroup("@User.Identity.Name","@Html.DisplayFor(model => model.Name)");
+                chat.server.joinGroup("Tester","home");
 
 
                 $('#btnSendGroup').click(function () {
-                    chat.server.sendGroups("@User.Identity.Name","@Html.DisplayFor(model => model.Name)", $('#messageGroup').val());
+                    chat.server.sendGroups("Tester","home", $('#messageGroup').val());
                 });
+
+                $('#btnPrivat').click(function () {
+                    chat.server.sendPrivat("Tester", $('#messageGroup').val(), $('#privat').val());
+                });
+
 
             });
         });
@@ -253,30 +273,6 @@
             chatModel.message = $("msg").val();
             chatModel.user = "@User.Identity.Name";
             chatModel.timeStamp = Date.now();
-        }
-        //image preview
-        function readURL(input) {
-            if (input.files && input.files[0]) {
-                var reader = new FileReader();
-                var file = input.files[0];
-                if (file.type.match('pdf.*') || file.type.match('image.*')) {
-                    $('#noPreview').css('display', 'none')
-                    $('#blah').css('display', 'inline')
-
-                    reader.onload = function (e) {
-                        $('#blah').attr('src', e.target.result);
-                    }
-                    reader.readAsDataURL(input.files[0]);
-                    $('#myModal').css('display', 'inline')
-                }
-                else {
-                    $('#blah').css('display', 'none')
-                    $('#noPreview').css('display', 'inline')
-                }
             }
-        }
-        $("#imgInp").change(function () {
-            readURL(this);
-        });
     </script>
 }
